--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>MEDIA RECORDER</h1>
     <video id="live" width="800px" height="400px" autoplay controls></video>
     <button id="record" class="button">Record</button>
-    <button id="stop" class="button">Stop</button>
+    <button id="stop" class="button">Preview</button>
     <video id="recording" width="500px" height="250px" loop controls></video>
   </div>
 
